objects/nitro__Nitro_State__c.object
<CustomObject>
    <fields>
        <fullName>nitro__Object_Id_New__c</fullName>
        <externalId>true</externalId>
        <label>Object Id New</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__State_Type__c</fullName>
        <label>State Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__State_Value__c</fullName>
        <label>State Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__UpsertId_New__c</fullName>
        <externalId>true</externalId>
        <label>UpsertId New</label>
        <length>125</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nitro__UpsertId__c</fullName>
        <externalId>true</externalId>
        <label>UpsertId</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <label>Nitro State</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Nitro State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nitro States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>